before last step

--- a/src/index.css
+++ b/src/index.css
@@ -13,26 +13,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%); */
+
+}
+
+.app {
+  position: relative;
+  /* background-color: white; */
 
 }
 
 .d-flex {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 
 }
 
 .login {
-  width: 360px;
+  height: 100vh;
   padding: 8% 0 0;
   margin: auto;
   font-family: 'Comfortaa', cursive;
+  background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+
 
 }
 
 .login .form {
+  width: 360px;
   position: relative;
   background: #FFFFFF;
   border-radius: 10px;
@@ -95,116 +103,133 @@ body {
 
 /* end login style */
 .header-search {
-  position: fixed;
-  /* top: 0; */
-  left: 0;
-  right: 0;
-  top: 0;
-  background-color: rgb(255, 255, 255);
-  height: 15vh;
-  padding: 0 3em;
+  padding: .7em 3em;
   flex-direction: column;
-  /* align-items: center; */
+  border-bottom: 1px solid #3f3f41;
 
-  /* background: linear-gradient(90deg,  #182848 100%,#4b6cb7 0%); */
-  background-color: white;
-  border-bottom: 2px solid #182848;
-  z-index: 1;
 }
 
 .userIcon-menu {
   padding: .5em .7em;
   display: flex;
   gap: 10px;
-  /* border: 2px solid  ; */
   border: 2px solid #182848;
   border-radius: 20px;
+  align-items: center;
 
 }
 
 .search-bar {
-  background-color: #7f8797;
-  background-color: #f1e9e9;   
-  
-  /* display: flex; */
-  /* max-width: max-content; */
-  border-radius: 50px;
-  padding: .71em 1.7em;
-  height: 6vh;
+  background-color: #f8f8f8;
+  padding: 0 10px;
+  border-radius: 31px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid black;
+  width: fit-content;
+  position: relative;
 
 }
 
+.search-bar>div {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.search-bar>div:last-child {
+  margin-right: 0;
+}
+
+.search-bar label {
+  display: block;
+  font-size: 14px;
+  color: #333;
+  
+}
+
+.search-bar input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background-color: transparent;
+
+
+
+}
+
+.search-bar .date-container {
+  width: 100%;
+  height: 100%;
+  padding: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 31px;
+
+  border-right: 1px solid black;
+
+
+
+}
+
+.date-container input,
+.user-option {
+  border: none;
+  outline: none;
+}
+
+.search-bar details summary {
+  list-style: none;
+}
+
+.guests-details {
+  cursor: 'pointer';
+  padding: '10px';
+  border-radius: '5px';
+  cursor: pointer;
+  margin-right: 5px;
+
+}
+
+.guests-container {
+  position: absolute;
+  top: 105%;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  z-index: 100;
+  width: 210px;
+
+  border-radius: 13px;
+}
 
 .ciSearch {
-  background: none;
+  padding: 8px;
+  background-color: #007bff;
   border: none;
+  border-radius: 21px;
+  color: white;
+  cursor: pointer;
 }
 
 .ciSearch-icon {
-  /* font-weight: 900; */
-  font-size: 45px;
+  font-size: 18px;
 }
 
-.app {
-  position: relative;
-  top: 15vh;
-  background-color: white;
-  height: 90vh;
-  padding: 2em;
-}
-
-.gg {
-  background-color: white;
-
-}
 
 h3 {
   text-wrap: wrap;
 }
 
 
-.date-container {
-  /* position: relative; */
-  cursor: pointer;
-}
-
 .date-placeholder {
-  /* position: absolute; */
-  /* top: 50%; */
-  /* left: 0; */
-  /* transform: translateY(-50%); */
   color: rgb(5, 4, 4);
   pointer-events: none;
   font-size: 16px;
   padding-left: 5px;
 }
 
-input[type="date"] {
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
-  width: 100%;
-  height: 100%;
-  opacity: 100;
-  cursor: pointer;
-}
 
-
-
-/*  */
-/*  */
-
-
-
-
-
-
-
-
-
-
-
-/* test */
 /* Card.css */
 .cards {
   display: flex;
@@ -226,11 +251,12 @@ input[type="date"] {
   flex-direction: column;
   align-items: center;
 }
-.HCard:hover ,.RCard:hover {
-  background-color: #f1e9e9;              /* Default color (e.g., gray) */
-  cursor: pointer;          /* Change cursor to pointer on hover */
-  transition: color 0.3s;   /* Smooth transition for color change */
-  /* z-index: 1000; */
+
+.HCard:hover,
+.RCard:hover {
+  background-color: #f8f8f8;
+  cursor: pointer;
+  transition: color 0.3s;
 }
 
 .room-image {
@@ -251,14 +277,7 @@ input[type="date"] {
 
 }
 
-.faHeart {
-  position: absolute;
-  right: 37px;
-  top: 29px;
-  font-size: 35px;
-  color: red;
 
-}
 
 .CiHeart:focus {
   background-color: red;
@@ -293,6 +312,13 @@ input[type="date"] {
 
 }
 
+.header {
+  width: 100%;
+  /* background-color: #405EA0; */
+  justify-content: space-between;
+
+}
+
 .cardHeader {
   display: flex;
   justify-content: space-between;
@@ -303,21 +329,590 @@ input[type="date"] {
   color: gold
 }
 
+.faHeart-abs {
+  position: absolute;
+  right: 37px;
+  top: 29px;
+  font-size: 35px;
 
-/* Base style for the heart icon */
+}
+
 .faHeart {
-  font-size: 24px;          /* Adjust size */
-  color: #ccc;              /* Default color (e.g., gray) */
-  cursor: pointer;          /* Change cursor to pointer on hover */
-  transition: color 0.3s;   /* Smooth transition for color change */
+  font-size: 24px;
+  color: #ccc;
+  cursor: pointer;
+  transition: color 0.3s;
 }
 
-/* Style when the heart is marked as favorite */
+
 .faHeart.favorite {
-  color: red;               /* Change color to red when favorite */
+  color: red;
 }
 
-/* Optional: Add a hover effect */
+
 .faHeart:hover {
-  color: #ff6666;           /* Slightly lighter red on hover */
+  color: #ff6666;
+}
+
+
+
+
+
+
+
+
+/* ADMIN */
+.left-nav {
+  width: 250px;
+  background-color: #405EA0;
+  color: #ecf0f1;
+  transition: width 0.3s ease;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.left-nav nav ul {
+  list-style: none;
+  padding: 0;
+  padding-top: 20px;
+
+}
+
+.left-nav nav ul li {
+  padding: 15px;
+}
+
+.left-nav nav ul li a {
+  color: #ecf0f1;
+  font-weight: bold;
+  text-decoration: none;
+  display: block;
+  padding: 9px 20px;
+}
+
+.left-nav nav ul li a:focus {
+  transition: .7 ease;
+  color: #182949;
+  background-color: rgb(108, 104, 111);
+}
+
+.admin-search-bar {
+  margin: 20px;
+}
+
+.admin-search-bar input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #bdc3c7;
+  border-radius: 4px;
+}
+
+.admin-grid {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+}
+
+.admin-grid th,
+.admin-grid td {
+  border: 1px solid #bdc3c7;
+  padding: 12px;
+  text-align: left;
+}
+
+.admin-grid th {
+  background-color: #405EA0;
+  color: #ecf0f1;
+}
+
+.admin-grid tr {
+  cursor: pointer;
+}
+
+.admin-grid tr:hover {
+  background-color: #ecf0f1;
+}
+
+.admin-grid button {
+  padding: 5px 10px;
+  border: none;
+  background-color: #e74c3c;
+  color: #fff;
+  cursor: pointer;
+}
+
+.admin-grid button:hover {
+  background-color: #c0392b;
+}
+
+.create-button {
+  padding: 10px 20px;
+  background-color: #27ae60;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 20px;
+}
+
+.create-button:hover {
+  background-color: #2ecc71;
+}
+
+.entity-update-form {
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  margin: 20px;
+}
+
+.entity-update-form .form-group {
+  margin-bottom: 15px;
+}
+
+.entity-update-form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.entity-update-form input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #bdc3c7;
+  border-radius: 4px;
+}
+
+.entity-update-form button {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.entity-update-form button:hover {
+  background-color: #2980b9;
+}
+
+.admin-page {
+  display: flex;
+  /* position: relative; */
+  /* flex-direction: column; */
+  /* height: 100vh; */
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  margin-left: 250px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* //////////////////////////////////////////// */
+.checkout-form {
+  max-width: 600px;
+  margin: 2em auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.checkout-form h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: #333;
+}
+
+.checkout-form label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: #555;
+}
+
+.checkout-form input,
+.checkout-form select,
+.checkout-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.checkout-form button {
+  width: 100%;
+  padding: 12px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.checkout-form button:hover {
+  background-color: #0056b3;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
+  margin-top: -15px;
+  margin-bottom: 15px;
+}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////// */
+.roomDet {
+  padding: .7em 3em;
+  flex-direction: column;
+  gap: 2em;
+  
+  
+}
+.room-num{
+  /* background-color: #0056b3; */
+width: 100%;
+}
+
+.room-imgs {
+  margin-top: 1em;
+  max-height: 700px;
+  width: 100%;
+}
+
+.main-image {
+  width: 50%;
+  height: 100%;
+}
+
+.roomDet-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-thumbnail {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  width: 50%;
+  height: 100%;
+
+
+
+
+}
+
+.thumbnail {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  cursor: pointer;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  transition: 0.3s ease;
+  box-sizing: border-box;
+
+}
+
+.thumbnail:hover {
+  transform: scale(1.05);
+}
+.det-thumbnail{
+  padding: 1em;
+  /* max-height: 350px; */
+  height: initial;
+}
+.det-thumbnail ul{
+  padding: 1em;
+  margin-top:1em ;
+  padding-left :0.5em; ;
+  list-style: none;
+  font-weight: 500;
+}
+
+.room-description {
+  flex: 0.8;
+  padding: 20px;
+ 
+}
+
+.confirm-room {
+  flex: 0.3;
+  padding: 20px;
+  border-radius: 12px;
+  max-width: 350px;
+  background-color: #f5f5f5; 
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+
+}
+
+.confirm-room .date-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius:8px  8px 0 0 ;
+  border: 1px solid rgb(154, 153, 153);
+
+  width: 100%;
+
+}
+
+.label-date {
+  width: 50%;
+  display: block;
+  /* background-color: #0056b3; */
+}
+.label-date:nth-child(2){
+height: 100%;
+  /* border-left: 2px solid red; */
+}
+
+.label-date h4 {
+  font-size: 1.1rem;
+  margin-bottom: 8px;
+}
+
+.date-picker {
+  width: 100%;
+  padding: 8px;
+  background-color: #f8f9fa;
+  border: none;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+
+.confirm-room .guests-details {
+  border-radius: 0 0 8px 8px;
+
+  padding: 10px;
+  margin-bottom: 20px;
+  position: relative;
+  border: 1px solid rgb(154, 153, 153);
+  width: 100%;
+ 
+}
+details , summary {
+  width: 100%;
+}
+
+.guests-summary{
+  align-items: center;
+  cursor: pointer;
+  font-size: 1.1rem;
+  display: flex;
+  justify-content: space-between;
+width:100% ;
+}
+.guests-summary h4 {
+
+  flex-grow: 1; 
+}
+
+details[open] summary::after {
+  transform: rotate(180deg); 
+}
+
+details summary::after {
+  content: '▼';
+  margin-left: 8px;
+}
+
+.guests-details summary:hover {
+  color: #777673;
+}
+
+.guests-details .guests-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  flex-direction: column;
+}
+
+.guests-container label {
+  font-size: 0.9rem;
+  color: #fff;
+  /* border: 2px solid red; */
+  color: #182949;
+
+
+}
+.guests-container label input{
+  display: block;
+  width: 100%;
+}
+
+
+.confirm-room .error {
+  color: #ff4d4d;
+  background-color: #fff3f3;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.ciSearch {
+  background-color: #28a745;
+  color: #fff;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.ciSearch:hover {
+  background-color: #218838;
+}
+
+
+.footer {
+  margin-top: 9em;
+  background-color: #222;
+  color: #fff;
+  padding: 40px 0;
+  text-align: left;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 100px;
+}
+
+.footer-section {
+  flex: 1;
+  margin: 0 20px;
+}
+
+.footer-section h2 {
+  color: #B37402;
+
+  margin-bottom: 20px;
+}
+
+.footer-section p, .footer-section ul, .footer-section a {
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+  text-decoration: none;
+  color: #f1f1f1;
+  transition: color 0.3s;
+}
+
+.footer-section ul li a:hover {
+  color: #B37402;
+
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 20px 0;
+  border-top: 1px solid #444;
+  margin-top: 20px;
+  font-size: 14px;
+}
+/* //////////////////////////////////////////////////////////// */
+.confirmation-page {
+  background-color: #f4f4f9;
+  padding: 40px;
+  max-width: 800px;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
+}
+
+.confirmation-page h2 {
+  font-size: 2rem;
+  color: #2c3e50;
+  margin-bottom: 20px;
+  border-bottom: 2px solid #3498db;
+  padding-bottom: 10px;
+}
+
+.confirmation-page p {
+  font-size: 1.1rem;
+  margin: 10px 0;
+  color: #333;
+}
+
+.confirmation-page p strong {
+  font-weight: bold;
+  color: #2c3e50;
+}
+
+.confirmation-page .confirmation-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.confirmation-page button {
+  background-color: #3498db;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.confirmation-page button:hover {
+  background-color: #2980b9;
+}
+
+.confirmation-page button:focus {
+  outline: none;
+}
+
+.confirmation-actions button {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.confirmation-actions button:last-child {
+  margin-right: 0;
 }
